GNOME Bugzilla – Bug 663761
gtk: Fix GtkCellRenderer ignoring keycodes
Last modified: 2011-11-10 14:35:04 UTC
.
Created attachment 201128 [details] [review] gtk: Fix GtkCellRenderer ignoring keycodes We should use the new helper code rather than invent our own functions again.
Created attachment 201129 [details] [review] gtk: Fix parsing of accelerators with keycodes GDK_KEY_VoidSymbol is not the same as keycode 0. This fixes keycodes such as "0xb3" being parsed as "VoidSymbol" keysyms.
Review of attachment 201128 [details] [review]: Looks good to me
Review of attachment 201129 [details] [review]: Looks good
commit c30d313afcc6941d8c64c83854fdd0fe33049917 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Nov 10 10:59:44 2011 +0000 gtk: Fix parsing of accelerators with keycodes GDK_KEY_VoidSymbol is not the same as keycode 0. This fixes keycodes such as "0xb3" being parsed as "VoidSymbol" keysyms. https://bugzilla.gnome.org/show_bug.cgi?id=663761 commit d69c7f4776506efd0c66dccf7e16bb9461f040c0 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Nov 10 10:58:37 2011 +0000 gtk: Fix GtkCellRenderer ignoring keycodes We should use the new helper code rather than invent our own functions again. https://bugzilla.gnome.org/show_bug.cgi?id=663761