gtk: Fix GtkCellRenderer ignoring keycodes

We should use the new helper code rather than invent our own
functions again.

https://bugzilla.gnome.org/show_bug.cgi?id=663761